force-app/main/default/objects/Case/fields/Mambu_Response__c.field-meta.xml
<CustomField>
    <fullName>Mambu_Response__c</fullName>
    <label>Mambu Response</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>