force-app/main/default/objects/Case/fields/Mambu_Transaction_Data__c.field-meta.xml
<CustomField>
    <fullName>Mambu_Transaction_Data__c</fullName>
    <label>Mambu Transaction Data</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>