force-app/main/default/objects/Case/fields/Mambu_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Mambu_Transaction_Status__c</fullName>
    <label>Mambu Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>