force-app/main/default/objects/Case/fields/Mambu_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Mambu_Transaction_Type__c</fullName>
    <label>Mambu Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Journal Entry</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>